=== SVN

* Added Dataset#reverse alias to Dataset#reverse_order (#174).

* Fixed Dataset#transform_load and #transform_save to create a trasnformed copy of the supplied hash instead of transforming it in place (#184).

* Implemented MySQL::Dataset#replace (#163).

=== 1.2 (2008-02-15)

* Added support for :varchar[100] like type declarations in #create_table.

* Fixed #rename_column in mysql adapter to support types like varchar(255) (#159).

* Added support for order and limit in DELETE statement in MySQL adapter (#160).

* Added checks to Dataset#multi_insert to prevent work if no values are given (#162).

* Override ruby2ruby implementation of Proc#to_sexp which leaks memory (#161).

* Added log option, help for sequel script (#157).

=== 1.1 (2008-02-15)

* Fixed Dataset#join_table to support joining of datasets (#156).

* Changed Dataset#empty? to use EXISTS condition instead of counting records, for much better performance (#158).

* Implemented insertion of multiple records in a single statement for postgres adapter. This feature is available only in postgres 8.2 and newer.

* Implemented Postgres::Database#server_version.

* Implemented Database#get, short for dataset.get(...).

* Refactored Dataset#multi_insert, added #import alias, added support for calling #multi_insert using array of columns and array of value arrays (thanks David Lee).

* Implemented Dataset#get, a replacement for select(column).first[column].

* Implemented Dataset#grep method, poor man's text search.

=== 1.0.10 (2008-02-13)

* Fixed Datset#group_and_count to work inside a query block (#152).

* Changed datasets with transforms to automatically transform hash filters (#155).

* Changed Marshal stock transform to use Base64 encoding with backward-compatibility to support existing marshaled values (#154).

* Added support for inserting multiple records in a single statement using #multi_insert in MySQL adapter (#153).
